@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-21T01:39:24Z",
-  "count_outdated" : 23,
-  "uniques_outdated" : 6,
+  "timestamp" : "2022-05-21T16:32:54Z",
+  "count_outdated" : 27,
+  "uniques_outdated" : 7,
   "count" : 28,
   "uniques" : 8,
   "views" : [
-    {
-      "timestamp": "2022-05-07T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 1,
