@@ -1,3 +1,10 @@
+2022-05-21T16:32:54Z:
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 6 23 / 8 28
+* notice: next accum: outdated-unq outdated-all / unq all: 7 27 / 8 28
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-21T01:39:24Z:
 * notice: last 14d: unq all: 1 5
 * notice: prev accum: outdated-unq outdated-all / unq all: 5 22 / 8 28
